--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/boracay.jpg" style="width:100%;min-height:200px">
+  <img src="img/tubbataha-reef.jpeg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Boracay Beach</h2>
+  <h2>Tubbataha Reefs</h2>
   <p>
-    Boracay Island in the Philippines has been called the Ibiza of Asia, a honeymooner’s dream and a backpacker’s secret, but as the number of visitors increased, so too did the environmental issues. In an attempt to save the island’s ecosystem from ruin, in 2018 the island was closed for six months. Culture Trip speaks to locals about the effect the shutdown had.
+    Tubbataha Reefs Natural Park lies in a unique position in the centre of the Sulu Sea, and includes the Tubbataha and Jessie Beazley Reefs.
   </p>
 </div>
 
@@ -27,12 +27,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/elnido.jpg" style="width:100%;min-height:200px">
+  <img src="img/Sitio-Pungayan-La-Presa.jpeg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>El Nido Palawan</h2>
+  <h2>La Presa</h2>
   <p>
-    You’ve probably seen photographs of the stunning limestone formations around El Nido rising majestically above the turquoise water. It is one of the most popular destinations in the Philippines and for good reason, the nearby islands and beaches are absolutely stunning. But the actual town of El Nido leaves something to be desired. The infrastructure has not yet caught up with the massive influx of tourists. Which means a lot of construction, contaminated water, questionable toilets, and high prices.
+    The actual Sitio Pungayan in Mt. Kabuyao, Tuba, Benguet has now adopted “La Presa” as its magical name, and has become a popular tourist spot for Baguio goers. It has attracted local tourists who want to relive the Forevermore love story. 
   </p>
 </div>
 
@@ -40,12 +40,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/chocolatehills.jpg" style="width:100%;min-height:200px">
+  <img src="img/vigan.jpeg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Chocolate Hills</h2>
+  <h2>Vigan City</h2>
   <p>
-    According to legends, the Chocolate Hills existed because of a weeping giant who had been disappointed in love, and the hills grew where his tears fell. In another legend, two giants went to war and lobbed boulders at each other for days. The giants eventually resolved their differences, but the mounds remained where the rocks landed.
+    Historic City of Vigan Established in the 16th century, Vigan is the best-preserved example of a planned Spanish colonial town in Asia.
   </p>
 </div>
 
@@ -53,12 +53,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/puerto-princesa-underground-river.jpg" style="width:100%;min-height:200px">
+  <img src="img/ANGKLA.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Undergroud River</h2>
+  <h2>Angkla</h2>
   <p>
-    It’s not surprising at all when Palawan has been recognized as the best island in the world by international travel magazines. With its pristine beaches and breathtaking lagoons, you will never be disappointed at what’s waiting for you. One charming treasure of Palawan that truly stands out is the Puerto Princesa Subterranean River National Park.
+    A Picturesque Paradise in Palawan. Welcome to ANGKLA, a scenic stop nestled along the strikingly beautiful stretch of white sand in Nacpan Beach, El Nido.
     </p>
 </div>
 
@@ -66,12 +66,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/banauerice.jpg" style="width:100%;min-height:200px">
+  <img src="img/banner.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Banaue Rice Terraces</h2>
+  <h2>Falls</h2>
   <p>
-    Ang Hagdan-hagdang Palayan ng Banawe (Ingles: Banaue Rice Terraces) ay mga 2000-taong gulang na mga hagdanang-taniman na nililok sa mga bulubundukin ng Ifugao sa Pilipinas ng mga ninuno ng mga katutubong mamamayanang Batad. Karaniwang tinatawag ito ng mga Pilipino bilang "Ikawalong Kahangahangang Pook sa Mundo". Tinatawag itong payew sa katutubong pananalita sa Ifugao.
+    If you fall, fall majestically and yes, some things have to fall to be beautiful – this is how Lalatuan falls is, regal yet stunning. Approximately 50 meters high, Lalatuan, the last stop of the chasing waterfalls adventure in Bataraza, is a picture of serene beauty perched in the middle of the forest surrounded by rich flora. The soft fall of the waters contrasted the strength of the rocks around it and the lagoon is a depiction of a lovely dream – deep, calming, and something you’d want to remember when you go back to the reality.
   </p>
 </div>
 
@@ -79,12 +79,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/taal.jpg" style="width:100%;min-height:200px">
+  <img src="img/Coron-Palawan-4.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Taal Volcano</h2>
+  <h2>Coron</h2>
   <p>
-    Mayon Volcano-north of Legazpi city, Albay, Bicol Mayon Volcano, also known as Mount Mayon , is an active mountain in the province of Albay , on the island of Luzon in the Philippines.
+    Coron is the largest town on the island. The municipality covers part of Busuanga Island and all of the nearby Coron Island.
   </p>
 </div>
 
@@ -92,4 +92,3 @@
 </div>
 </body>
 </html>
-
